feat: Replace test runner with custom implementation
- Added `dev/test.mjs` to load and run tests.
- Modified `nbb.edn` to remove `nbb-test-runner` dependency.
- Updated `package.json` to use the new test script.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "nrepl": "node --env-file=.env dev/nrepl.mjs",
     "cli": "node --env-file=.env dev/run.mjs",
-    "test": "nbb -cp test -m nextjournal.test-runner"
+    "test": "node --no-deprecation dev/test.mjs"
   },
   "dependencies": {
     "cli-progress": "^3.12.0",
