feat: Enhance configuration handling
Refactored configuration handling to support expanded keys. Added
parsing functions for dates and integers. Updated tests to cover new
configuration logic. Improved delay handling for Bitbucket and Jira
integrations.

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,32 @@
-DELAY_429=5000
 DB_PATH=
 
+TASK_TYPE=
+TASK_SOURCE=
+
+HTTP_DELAY_429=5000
+
+JENKINS_JOB_PATH=
 JENKINS_URL=
 JENKINS_USERNAME=
 JENKINS_PASSWORD=
+JENKINS_DELAY=500
+
+GIT_REPOSITORY=
+GIT_BRANCH=
+GIT_REMOTE=
+GIT_PULL=
+
+JIRA_URL=
+JIRA_USERNAME=
+JIRA_PASSWORD=
+JIRA_JQL=
+JIRA_DELAY=2000
+
+BITBUCKET_URL=
+BITBUCKET_USERNAME=
+BITBUCKET_PASSWORD=
+BITBUCKET_REPO_SLUG=
+BITBUCKET_FILTER_FROM=
+BITBUCKET_PAST_MONTHS=
+BITBUCKET_DELAY=1000
+BITBUCKET_ACTIVITY_DELAY=1000
